toolchain/parse/src/types/snapshots/knot_parse__types__type_expression__tests__float.snap
---
source: toolchain/parse/src/types/type_expression.rs
expression: ast
---
TypeExpression(
    Node(
        Primitive(
            Float,
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                5,
            ),
        ),
        (),
    ),
)
