toolchain/parse/src/types/snapshots/knot_parse__types__type_expression__tests__function.snap
---
source: toolchain/parse/src/types/type_expression.rs
expression: ast
---
TypeExpression(
    Node(
        Function(
            [
                TypeExpression(
                    Node(
                        Primitive(
                            Nil,
                        ),
                        Range(
                            Point(
                                1,
                                2,
                            ),
                            Point(
                                1,
                                4,
                            ),
                        ),
                        (),
                    ),
                ),
                TypeExpression(
                    Node(
                        Primitive(
                            Boolean,
                        ),
                        Range(
                            Point(
                                1,
                                7,
                            ),
                            Point(
                                1,
                                13,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
            TypeExpression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            19,
                        ),
                        Point(
                            1,
                            21,
                        ),
                    ),
                    (),
                ),
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                21,
            ),
        ),
        (),
    ),
)
