toolchain/parse/src/types/snapshots/knot_parse__types__type_expression__tests__object.snap
---
source: toolchain/parse/src/types/type_expression.rs
expression: ast
---
TypeExpression(
    Node(
        Object(
            [
                Required(
                    Binding(
                        Node(
                            Binding(
                                "foo",
                            ),
                            Range(
                                Point(
                                    2,
                                    3,
                                ),
                                Point(
                                    2,
                                    5,
                                ),
                            ),
                            (),
                        ),
                    ),
                    TypeExpression(
                        Node(
                            Primitive(
                                Integer,
                            ),
                            Range(
                                Point(
                                    2,
                                    8,
                                ),
                                Point(
                                    2,
                                    14,
                                ),
                            ),
                            (),
                        ),
                    ),
                ),
                Optional(
                    Binding(
                        Node(
                            Binding(
                                "bar",
                            ),
                            Range(
                                Point(
                                    3,
                                    3,
                                ),
                                Point(
                                    3,
                                    5,
                                ),
                            ),
                            (),
                        ),
                    ),
                    TypeExpression(
                        Node(
                            Primitive(
                                Boolean,
                            ),
                            Range(
                                Point(
                                    3,
                                    9,
                                ),
                                Point(
                                    3,
                                    15,
                                ),
                            ),
                            (),
                        ),
                    ),
                ),
                Spread(
                    TypeExpression(
                        Node(
                            Identifier(
                                "fizz",
                            ),
                            Range(
                                Point(
                                    4,
                                    6,
                                ),
                                Point(
                                    4,
                                    9,
                                ),
                            ),
                            (),
                        ),
                    ),
                ),
            ],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                5,
                1,
            ),
        ),
        (),
    ),
)
