toolchain/parse/src/types/snapshots/knot_parse__types__type_expression__tests__property_access.snap
---
source: toolchain/parse/src/types/type_expression.rs
expression: ast
---
TypeExpression(
    Node(
        PropertyAccess(
            TypeExpression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            1,
                        ),
                        Point(
                            1,
                            3,
                        ),
                    ),
                    (),
                ),
            ),
            "foo",
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                7,
            ),
        ),
        (),
    ),
)
